# ai-email-assistant

./: .gitignore  README.md  system-overview.html  system-overview.md
backend/: .env.example  README.md  alembic.ini  email_assistant.db  pyproject.toml  requirements.txt  test_orchestrator.py  test_run.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_whitelist.py  0002_summary_and_oauth.py  0003_gmail_draft_id.py  0004_replied_at.py  0005_drop_whitelist_priority.py
backend/scripts/: seed_dev.py
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/auto_reply/: __init__.py
backend/src/auto_reply/agent/: guardrails.py
backend/src/auto_reply/api/: dashboard_router.py  draft_router.py  gmail_auth_router.py  gmail_router.py  inbox_router.py  log_router.py  whitelist_router.py
backend/src/auto_reply/infrastructure/: models.py  repositories.py
backend/src/auto_reply/proxy/: __init__.py  gmail_adapter.py  gmail_client.py  gmail_poller.py  google_oauth.py  llm_adapter.py
backend/src/auto_reply/tools/: bulk_import_tool.py  draft_store_tool.py  log_query_tool.py  matcher_tool.py  oauth_store_tool.py  stats_tool.py  whitelist_tool.py
backend/src/auto_reply/workflow/: __init__.py  auto_reply_workflow.py  background_worker.py  rescan.py  retry_queue.py
backend/src/email_module/: schemas.py  services.py  templates.py
backend/src/orchestrator/: __init__.py  api.py  config.py  contracts.py  drafters.py  llm_client.py  orchestrator.py
backend/src/summarization/: README.md  __init__.py  api.py  errors.py  models.py  preprocessing.py  providers.py  service.py
backend/tests/: conftest.py  fakes.py  test_api.py  test_live_providers.py  test_models.py  test_orchestrator_contract.py  test_preprocessing.py  test_providers.py  test_service.py
backend/tests/auto_reply/: conftest.py  test_log_api.py  test_matcher_tool.py  test_rescan.py  test_stats_tool.py  test_whitelist_api.py  test_whitelist_tool.py  test_workflow.py
docs/: demo.md
docs/architecture/: frontend-plan.md  orchestrator-plan.md  system-architecture.md
docs/setup/: gmail-oauth.md
frontend/: README.md  manifest.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: make_icons.py
frontend/src/background/: index.ts  notifications.ts  poller.ts  workerApi.ts
frontend/src/components/: PanelPlaceholder.tsx
frontend/src/content/: index.ts  readSender.ts
frontend/src/hooks/: useHealth.ts
frontend/src/layouts/: PanelLayout.tsx  SectionHeader.tsx
frontend/src/services/: config.ts  errors.ts  fetchClient.ts  http.ts
frontend/src/sidepanel/: App.tsx  PanelHeader.tsx  TabNav.tsx  index.html  (+3 more)
(+57 files in other folders)
