[project]
name = "ai-email-assistant-backend"
version = "0.1.0"
description = "Backend services for the AI Email Assistant"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "email-validator>=2.2,<3",
    "fastapi>=0.116,<1",
    "google-genai>=1.0,<2",
    "groq>=0.30,<1",
    "jinja2>=3.1,<4",
    "pydantic-settings>=2.10,<3",
    "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.4,<10",
    "pytest-asyncio>=1.1,<2",
    "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "strict"
testpaths = ["tests"]
markers = ["live: calls configured external model providers"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
