[project]
name = "ai-email-assistant-backend"
version = "0.2.0"
description = "Backend services for the AI Email Assistant"
requires-python = ">=3.12"
dependencies = [
    # ── core web framework ──────────────────────────────────────────────────
    "fastapi>=0.116,<1",
    "uvicorn[standard]>=0.35,<1",
    "python-multipart>=0.0.9,<1",          # file upload (bulk import)

    # ── email / html parsing ─────────────────────────────────────────────
    "beautifulsoup4>=4.12,<5",
    "email-validator>=2.2,<3",

    # ── AI providers ─────────────────────────────────────────────────────
    "google-genai>=1.0,<2",
    "groq>=0.30,<1",

    # ── templating ───────────────────────────────────────────────────────
    "Jinja2>=3.1,<4",

    # ── settings ─────────────────────────────────────────────────────────
    "pydantic-settings>=2.10,<3",

    # ── persistence ──────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "alembic>=1.13,<2",

    # ── file import ──────────────────────────────────────────────────────
    "openpyxl>=3.1,<4",

    # ── http client (webhook notifications) ──────────────────────────────
    "httpx>=0.28,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.4,<10",
    "pytest-asyncio>=1.1,<2",
    "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "strict"
testpaths = ["tests"]
markers = ["live: calls configured external model providers"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
